--- a/main.html
+++ b/main.html
@@ -8,6 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		  <ul>
+        <li><a href="https://www.freecodecamp.org/learn">Home</a></li>
+        <li><a href="https://www.freecodecamp.org/news/about/">About us</a></li>
+        <li><a href="https://www.freecodecamp.org/news/support/">Contact us</a></li>
+	    </ul>
+	  </nav>
+
+	 <h1>3 random videos</h1>
+	<video controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+        
+    </video>
+
+    <video controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">
+    </video>
+    
+    <video controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">
+    </video>
     <script type="text/javascript" src="./script.js">
 </script>
 
